--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "brainpy>=2.6.0.post20241205",
     "diffrax>=0.6.2",
     "flax>=0.10.2",
     "gymnasium[classic-control]>=1.0.0",
