--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,20 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "brainpy>=2.6.0.post20241205",
-    "diffrax>=0.6.2",
-    "flax>=0.10.2",
-    "gymnasium[classic-control]>=1.0.0",
-    "ipykernel>=6.29.5",
-    "ipywidgets>=8.1.5",
     "jax>=0.4.35",
     "jaxlib>=0.4.35",
-    "jupyter>=1.1.1",
     "matplotlib>=3.10.0",
-    "numba>=0.61.0",
     "numpy>=2.1.3",
     "optax>=0.2.4",
     "pandas>=2.2.3",
-    "scipy>=1.14.1",
-    "seaborn>=0.13.2",
-    "wheel>=0.45.1",
+    "brax"
 ]
